deploy/ocp/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arch-manager
  namespace: arch-manager
  labels:
    app.kubernetes.io/name: arch-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: arch-manager
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
